--- a/Pages/Disaster/_AddDisaster.cshtml
+++ b/Pages/Disaster/_AddDisaster.cshtml
@@ -31,7 +31,7 @@
 				<div class="mb-3">
 					<label class="form-label" for="InputDisasterType">Disaster Type:</label>
 					<select class="form-select" id="InputDisasterType">
-						<option value="" selected disabled>Select Disaster Type</option>
+						<option value="">Select Disaster Type</option>
 						<option value="Fire">Fire</option>
 						<option value="Flood">Flood</option>
 						<option value="Earthquake">Earthquake</option>
