--- a/Pages/EvacuationCenter/_AddEvacuationCenter.cshtml
+++ b/Pages/EvacuationCenter/_AddEvacuationCenter.cshtml
@@ -1,5 +1,5 @@
 ﻿@page
-@model AgapayAidSystem.Pages.Evacuation._AddEvacuationModel
+@model AgapayAidSystem.Pages.EvacuationCenter._AddEvacuationCenterModel
 @{
 }
 
@@ -31,7 +31,7 @@
 		
 		<div class="row pt-3">
 			<div class="input-group">
-				<a class="btn btn-outline-primary" asp-area="" asp-page="/Evacuation/Index"><i class="bi bi-arrow-left-circle" style="padding: 5px;"></i>List of Evacuation Center</a>
+				<a class="btn btn-outline-primary" asp-area="" asp-page="/EvacuationCenter/Index"><i class="bi bi-arrow-left-circle" style="padding: 5px;"></i>List of Evacuation Center</a>
 			</div>
 		</div>
 
