Added page titles

--- a/Pages/UserManagement/CreateAdmin.cshtml
+++ b/Pages/UserManagement/CreateAdmin.cshtml
@@ -1,6 +1,7 @@
 ﻿@page
 @model AgapayAidSystem.Pages.UserManagement.CreateAdminModel
 @{
+    ViewData["Title"] = "New Admin";
 }
 
 <h1 class="text-center display-4">New Admin</h1>
