--- a/Pages/UserManagement/CreateECStaff.cshtml
+++ b/Pages/UserManagement/CreateECStaff.cshtml
@@ -1,6 +1,7 @@
 ﻿@page
 @model AgapayAidSystem.Pages.UserManagement.CreateECStaffModel
 @{
+    ViewData["Title"] = "New EC Staff";
 }
 
 <h1 class="text-center display-4">New EC Staff</h1>
