--- a/Pages/UserManagement/CreateLGUStaff.cshtml
+++ b/Pages/UserManagement/CreateLGUStaff.cshtml
@@ -1,6 +1,7 @@
 ﻿@page
 @model AgapayAidSystem.Pages.UserManagement.CreateLGUStaffModel
 @{
+    ViewData["Title"] = "New LGU Staff";
 }
 
 <h1 class="text-center display-4">New LGU Staff</h1>
