--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -1,16 +1,42 @@
-html {
-    font-size: 14px;
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700;800&display=swap');
+
+:root {
+    --bs-primary-color: #3F8F8B;
 }
 
-@media (min-width: 768px) {
-    html {
-        font-size: 16px;
+
+h1 {
+    font-weight: 700;
+
+}
+
+h3 {
+    font-weight: 600;
+}
+
+h5 {
+    font-weight: 500;
+}
+
+h1, .h1 {
+    font-size: calc(1.375rem + 1.5vw);
+}
+
+#disaster-form-container {
+    background-color: #F6F8FB;
+    padding: 20px;
+    box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.1);
+    border-radius: 20px;
+
+    @media (min-width: 768px) {
+        html {
+            font-size: 16px;
+        }
     }
 }
 
-html {
-    position: relative;
-    min-height: 100%;
+.button-spacer {
+    text-align: center;
 }
 
 body {
@@ -26,8 +52,15 @@ body {
     overflow: hidden;
 }
 
-    .user-photo img {
-        width: 100%;
-        height: auto;
-        border-radius: 50%;
-    }
+.user-photo img {
+    width: 100%;
+    height: auto;
+    border-radius: 50%;
+}
+
+.button-spacer button {
+        margin: 20px 10px; /* Add margin to create spacing between buttons */
+}
+
+
+
