--- a/Pages/Shared/_Layout.cshtml
+++ b/Pages/Shared/_Layout.cshtml
@@ -47,7 +47,7 @@
                             <a class="nav-link text-light" asp-area="" asp-page="/Inventory/Index">Inventory</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-light" asp-area="" asp-page="/Users/Index">Users</a>
+                            <a class="nav-link text-light" asp-area="" asp-page="/UserManagement/Index">Users</a>
                         </li>
 
                         <li class="nav-item">
@@ -55,7 +55,9 @@
                         </li>
 
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="UserManagement/Index">User Management</a>
+                            <a asp-area="" asp-page="#">
+                                <img src="~/sample-pic.jpg" alt="User Profile" class="rounded-circle" style="max-height: 35px; width: auto; margin-left:7px;">
+                            </a>
                         </li>
                     </ul>
                 </div>
