--- a/Pages/Disaster/Index.cshtml
+++ b/Pages/Disaster/Index.cshtml
@@ -1,6 +1,7 @@
 @page
 @model AgapayAidSystem.Pages.Disaster.IndexModel
 @{
+	ViewData["Title"] = "Disaster";
 }
 
 <div class="container p-2">
@@ -27,7 +28,7 @@
 
 		<div class="col-auto">
 			<div class="d-flex justify-content-end align-items-center">
-				<a asp-page="/Disaster/AddDisaster" class="btn btn-primary mb-2"><i class="bi bi-plus-circle pt" style="padding: 5px;"></i> Add Disaster</a>
+				<a class="btn btn-primary mb-2" href="Disaster/AddDisaster"><i class="bi bi-plus-circle pt" style="padding: 5px;"></i> Add Disaster</a>
 			</div>
 		</div>
 	</div>
