Updated Add Disaster csharp

--- a/Pages/Disaster/Index.cshtml
+++ b/Pages/Disaster/Index.cshtml
@@ -28,7 +28,7 @@
 
 		<div class="col-auto">
 			<div class="d-flex justify-content-end align-items-center">
-				<a class="btn btn-primary mb-2" href="Disaster/AddDisaster"><i class="bi bi-plus-circle pt" style="padding: 5px;"></i> Add Disaster</a>
+				<a class="btn btn-primary mb-2" href="/Disaster/AddDisaster"><i class="bi bi-plus-circle pt" style="padding: 5px;"></i> Add Disaster</a>
 			</div>
 		</div>
 	</div>
