--- a/Pages/UserManagement/CreateECStaff.cshtml
+++ b/Pages/UserManagement/CreateECStaff.cshtml
@@ -85,7 +85,7 @@
     </div>
 
     <div class="row mb-3">
-        <labeL>* Required field</label>
+        <small class="text-muted">* Required field</small>
     </div>
     
     @if (!string.IsNullOrEmpty(Model.successMessage))
