--- a/Pages/Disaster/Index.cshtml
+++ b/Pages/Disaster/Index.cshtml
@@ -63,8 +63,8 @@
 						<td width="10%">@item.dateOccured</td>
 						<td width=15%>
 							<button class="btn btn-primary"><i class="bi bi-file-earmark-post"></i></button>
-							<button class="btn btn-success"><i class="bi bi-pencil-fill"></i></button>
-							<button class="btn btn-danger"><i class="bi bi-trash-fill"></i></button>
+							<a class="btn btn-success" href="/Disaster/EditDisaster?disasterID=@item.disasterID"><i class="bi bi-pencil-fill"></i></a>
+							<a class="btn btn-danger" href="/Disaster/DeleteDisaster?disasterID=@item.disasterID"><i class="bi bi-trash-fill"></i></a>
 						</td>
 					</tr>
 				}
