--- a/Pages/UserManagement/Index.cshtml
+++ b/Pages/UserManagement/Index.cshtml
@@ -4,69 +4,115 @@
     ViewData["Title"] = "User Management";
 }
 
-<div class="container">
-    <div class="row">
-        <div class="col">User Management</div>
-        <div class="col-auto">
-            <a class="btn btn-primary btn-sm" href="/UserManagement/Create">New User</a>
+<div class="container p-2">
+    <div class="row pt-3">
+        <div class="col">
+            <!-- Breadcrumb -->
+            <nav style="--bs-breadcrumb-divider: '>';" aria-label="breadcrumb">
+                <ol class="breadcrumb">
+                    <li class="breadcrumb-item">
+                        <a class="nav-link text-muted" asp-area="" asp-page="/Index">
+                            <i class="bi bi-house-door-fill" style="padding: 5px;"></i>Home
+                        </a>
+                    </li>
+                    <li class="breadcrumb-item active" aria-current="page">User Management</li>
+                </ol>
+            </nav>
+
+            <!-- Search Bar -->
+            <div class="input-group">
+                <input type="search" class="form-control ds-input" id="search-bar" placeholder="Search here..."
+                       aria-label="Search..." autocomplete="off" role="combobox" aria-autocomplete="list" aria-expanded="false"
+                       aria-owns="algolia-autocomplete-listbox-0" dir="auto">
+                <button type="submit" class="btn btn-primary">
+                    <i class="bi bi-search"></i>
+                </button>
+            </div>
         </div>
     </div>
+
+    <div class="row pt-4">
+        <div class="col">
+            <h1>User Management</h1>
+        </div>
+
+        <div class="col-auto">
+            <div class="d-flex justify-content-end align-items-center">
+                <a asp-page="/UserManagement/Create" class="btn btn-primary mb-2"><i class="bi bi-plus-circle pt" style="padding: 5px;"></i>Add User</a>
+            </div>
+        </div>
+    </div>
+
+    <div class="table-responsive">
+        <table class="table align-middle table-hover " style="width:100%">
+            <thead>
+                <tr>
+                    <th></th>
+                    <th>Username</th>
+                    <th>User Type</th>
+                    <th>Created At</th>
+                    <th></th>
+                </tr>
+            </thead>
+            <tbody>
+                @foreach (var item in Model.listUsers)
+                {
+                    <tr>
+                        <td width="5%">
+                            @if (item.userPhoto != null && item.userPhoto.Length > 0)
+                            {
+                                <div class="user-photo">
+                                    <img src="data:image/png;base64,@Convert.ToBase64String(item.userPhoto)" alt="User Photo" width="50" />
+                                </div>
+                            }
+                            else
+                            {
+                                <div class="user-photo">
+                                    <img src="~/images/default_userPhoto.jpg" alt="Default User Photo" width="50" />
+                                </div>
+                            }
+                        </td>
+                        <td width="20%">@item.username</td>
+                        <td width="10%">@item.userType</td>
+                        <td width="20%">@item.createdAt</td>
+                        <td width="15%">
+                            @if (item.userType == "Admin")
+                            {
+                                <a href="/UserManagement/EditAdmin?userID=@item.userID" class="btn btn-success edit-button">
+                                    <i class="bi bi-pencil-fill"></i>Edit
+                                </a>
+                            }
+                            else if (item.userType == "EC Staff")
+                            {
+                                <a href="/UserManagement/EditECStaff?userID=@item.userID" class="btn btn-success edit-button">
+                                    <i class="bi bi-pencil-fill"></i>Edit
+                                </a>
+                            }
+                            else if (item.userType == "LGU Staff")
+                            {
+                                <a href="/UserManagement/EditLGUStaff?userID=@item.userID" class="btn btn-success edit-button">
+                                    <i class="bi bi-pencil-fill"></i>Edit
+                                </a>
+                            }
+
+                            <a href="#" onclick="confirmDelete('@item.userID')" class="btn btn-danger edit-button">
+                                <i class="bi bi-trash-fill"></i>Delete
+                            </a>
+
+                        </td>
+                    </tr>
+                }
+            </tbody>
+        </table>
+    </div>
 </div>
-<table class="table">
-    <thead>
-        <tr>
-            <th></th>
-            <th>Username</th>
-            <th>User Type</th>
-            <th>Created At</th>
-            <th></th>
-        </tr>
-    </thead>
-    <tbody>
-        @foreach (var item in Model.listUsers)
-        {
-            <tr>
-                <td>
-                    @if (item.userPhoto != null && item.userPhoto.Length > 0)
-                    {
-                        <div class="user-photo">
-                            <img src="data:image/png;base64,@Convert.ToBase64String(item.userPhoto)" alt="User Photo" width="50" />
-                        </div>
-                    }
-                    else
-                    {
-                        <div class="user-photo">
-                            <img src="~/images/default_userPhoto.jpg" alt="Default User Photo" width="50" />
-                        </div>
-                    }
-                </td>
-                <td>@item.username</td>
-                <td>@item.userType</td>
-                <td>@item.createdAt</td>
-                <td>
-                    @if (item.userType == "Admin")
-                    {
-                        <a class="btn btn-primary btn-sm" href="/UserManagement/EditAdmin?userID=@item.userID">Edit</a>
-                    }
-                    else if (item.userType == "EC Staff")
-                    {
-                        <a class="btn btn-primary btn-sm" href="/UserManagement/EditECStaff?userID=@item.userID">Edit</a>
-                    }
-                    else if (item.userType == "LGU Staff")
-                    {
-                        <a class="btn btn-primary btn-sm" href="/UserManagement/EditLGUStaff?userID=@item.userID">Edit</a>
-                    }
-                    <a class="btn btn-danger btn-sm" href="#" onclick="confirmDelete('@item.userID')">Delete</a>
-                </td>
-            </tr>
-        }
-    </tbody>
-</table>
 
 <script>
+
     function confirmDelete(userID) {
         if (confirm("Are you sure you want to delete this user?")) {
             window.location.href = "/UserManagement/Delete?userID=" + userID;
         }
     }
 </script>
+
