--- a/Pages/UserManagement/Create.cshtml
+++ b/Pages/UserManagement/Create.cshtml
@@ -4,62 +4,84 @@
 	ViewData["Title"] = "New User";
 }
 
-<h1 class="text-center display-4">New User</h1>
+<div class="container p-2">
 
-@if (!string.IsNullOrEmpty(Model.errorMessage))
-{
-	<div class="alert alert-warning alert-dismissible fade show" role="alert">
-		<strong>@Model.errorMessage</strong>
-		<button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+	<div class="progress" style="height: 20px;">
+		<div class="progress-bar" role="progressbar" style="width: 25%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
 	</div>
-}
 
-<form method="POST">
-	<div class="row mb-3">
-		<label class="col-sm-3 col-form-label">User Type</label>
-		<div class="col-sm-6">
-			<div class="form-check">
-				<input class="form-check-input" type="radio" name="userType" value="Admin" id="adminRadio"
-					@if (Model.userInfo.userType == "Admin") { <text>checked</text> }>
-				<label class="form-check-label" for="adminRadio">Admin</label>
-			</div>
-			<div class="form-check">
-				<input class="form-check-input" type="radio" name="userType" value="LGU Staff" id="lguRadio"
-					@if (Model.userInfo.userType == "LGU Staff") { <text>checked</text> }>
-				<label class="form-check-label" for="lguRadio">LGU Staff</label>
-			</div>
-			<div class="form-check">
-				<input class="form-check-input" type="radio" name="userType" value="EC Staff" id="ecRadio"
-				@if (Model.userInfo.userType == "EC Staff") { <text>checked</text> }>
-				<label class="form-check-label" for="ecRadio">EC Staff</label>
+	<div class="container mt-4 disaster-form-container">
+
+		<div class="row pt-4">
+			<div class="col text-center">
+				<h1>New User</h1>
 			</div>
 		</div>
-	</div>
 
-	<input type="hidden" name="userInfo.userType" value="@Model.userInfo.userType" />
-	<input type="hidden" name="userInfo.userID" value="@Model.userInfo.userID" />
+		@if (!string.IsNullOrEmpty(Model.errorMessage))
+		{
+			<div class="alert alert-warning alert-dismissible fade show" role="alert">
+				<strong>@Model.errorMessage</strong>
+				<button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+			</div>
+		}
 
-	@if (!string.IsNullOrEmpty(Model.successMessage))
-	{
-		<div class="row-mb-3">
-			<div class="col-sm-9">
-				<div class="alert alert-success alert-dismissible fade show" role="alert">
-					<strong>@Model.successMessage</strong>
-					<button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+		<div class="row pt-4">
+			<form method="POST">
+				<div class="row mb-3 user-container">
+					<label class="form-label" for="InputDisasterName">User :</label>
+					<div class="form-check">
+						<input class="form-check-input" type="radio" name="userType" value="Admin" id="adminRadio"
+						@if (Model.userInfo.userType == "Admin")
+						{
+							<text>checked</text>
+						}>
+						<label class="form-check-label" for="adminRadio">Admin</label>
+					</div>
+					<div class="form-check">
+						<input class="form-check-input" type="radio" name="userType" value="LGU Staff" id="lguRadio"
+						@if (Model.userInfo.userType == "LGU Staff")
+						{
+							<text>checked</text>
+						}>
+						<label class="form-check-label" for="lguRadio">LGU Staff</label>
+					</div>
+					<div class="form-check">
+						<input class="form-check-input" type="radio" name="userType" value="EC Staff" id="ecRadio"
+						@if (Model.userInfo.userType == "EC Staff")
+						{
+							<text>checked</text>
+						}>
+						<label class="form-check-label" for="ecRadio">EC Staff</label>
+					</div>
 				</div>
-			</div>
-		</div>
-	}
 
-	<div class="row mb-3">
-		<div class="offset-sm-3 col-sm-3 d-grid">
-			<button type="submit" class="btn btn-primary" id="submitBtn">Next</button>
-		</div>
-		<div class="col-sm-3 d-grid">
-			<a class="btn btn-outline-primary" href="/UserManagement/Index" role="button">Cancel</a>
+				<input type="hidden" name="userInfo.userType" value="@Model.userInfo.userType" />
+				<input type="hidden" name="userInfo.userID" value="@Model.userInfo.userID" />
+
+				@if (!string.IsNullOrEmpty(Model.successMessage))
+				{
+					<div class="row-mb-3">
+						<div class="col-sm-9">
+							<div class="alert alert-success alert-dismissible fade show" role="alert">
+								<strong>@Model.successMessage</strong>
+								<button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+							</div>
+						</div>
+					</div>
+				}
+
+				<!-- Cancel and Save Button -->
+				<div class="button-spacer">
+					<button class="btn btn-outline-secondary mr-10" href="/UserManagement/Index" role="button">Cancel</button>
+					<button type="submit" class="btn btn-primary" id="submitBtn">Save</button>
+				</div>
+
+			</form>
 		</div>
 	</div>
-</form>
+</div>
+
 
 <script>
 	const submitButton = document.getElementById('submitBtn');
