--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -22,7 +22,7 @@ h1, .h1 {
     font-size: calc(1.375rem + 1.5vw);
 }
 
-#disaster-form-container {
+.disaster-form-container {
     background-color: #F6F8FB;
     padding: 20px;
     box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.1);
@@ -69,6 +69,15 @@ body {
 
 .edit-button .bi {
     margin-right:5px;
+}
+
+.user-container{
+    padding: 20px;
+}
+
+.user-container .form-check{
+    padding: 10px;
+    margin-left: 30px;
 }
 
 /*DISASTER PROFILE*/
