--- a/Pages/UserManagement/CreateECStaff.cshtml
+++ b/Pages/UserManagement/CreateECStaff.cshtml
@@ -4,107 +4,115 @@
     ViewData["Title"] = "New EC Staff";
 }
 
-<h1 class="text-center display-4">New EC Staff</h1>
 
-@if (!string.IsNullOrEmpty(Model.errorMessage))
-{
-    <div class="alert alert-warning alert-dismissible fade show" role="alert">
-        <strong>@Model.errorMessage</strong>
-        <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
-    </div>
-}
+<div class="container p-2">
 
-<form method="POST">
-    <input type="hidden" name="userID" value="@Model.userID"/>
+	<div class="container mt-4 disaster-form-container">
 
-    <div class="row mb-3">
-        <label class="col-sm-3 col-form-label">User ID</label>
-        <div class="col-sm-6">
-            <span class="form-control-plaintext">@Model.userID</span>
-        </div>
-    </div>
+		<div class="row pt-4">
+			<div class="col text-center">
+				<h1>Add New User</h1>
+                <h6 class="text-dark">EC Staff</h6>
+			</div>
+		</div>
 
-    <div class="row mb-3">
-        <label class="col-sm-3 col-form-label">First Name *</label>
-        <div class="col-sm-6">
-            <input type="text" id="firstName" name="firstName" class="form-control" required maxlength="65" />
-        </div>
-    </div>
-    
-    <div class="row mb-3">
-        <label class="col-sm-3 col-form-label">Middle Name</label>
-        <div class="col-sm-6">
-            <input type="text" id="middleName" name="middleName" class="form-control" maxlength="65" />
-        </div>
-    </div>
-
-    <div class="row mb-3">
-        <label class="col-sm-3 col-form-label">Last Name *</label>
-        <div class="col-sm-6">
-            <input type="text" id="lastName" name="lastName" class="form-control" required maxlength="65" />
-        </div>
-    </div>
-
-    <div class="row mb-3">
-        <label class="col-sm-3 col-form-label">Extension Name</label>
-        <div class="col-sm-6">
-            <input type="text" id="extName" name="extName" class="form-control" maxlength="45" />
-        </div>
-    </div>
-
-    <div class="row mb-3">
-        <label class="col-sm-3 col-form-label">Sex *</label>
-        <div class="col-sm-6">
-            <select id="sex" name="sex" class="form-select" required>
-                <option value="">Please select</option>
-                <option value="M">Male</option>
-                <option value="F">Female</option>
-            </select>
-        </div>
-    </div>
-
-    <div class="row mb-3">
-        <label class="col-sm-3 col-form-label">Birthdate *</label>
-        <div class="col-sm-6">
-            <input type="date" id="birthdate" name="birthdate" class="form-control" required pattern="\d{4}-\d{2}-\d{2}" />
-        </div>
-    </div>
-
-    <div class="row mb-3">
-        <label class="col-sm-3 col-form-label">Mobile Number *</label>
-        <div class="col-sm-6">
-            <input type="tel" id="mobileNum" name="mobileNum" class="form-control" required maxlength="11" pattern="09\d{9}" />
-        </div>
-    </div>
-
-    <div class="row mb-3">
-        <label class="col-sm-3 col-form-label">Email Address *</label>
-        <div class="col-sm-6">
-            <input type="email" id="emailAddress" name="emailAddress" class="form-control" required maxlength="65" />
-        </div>
-    </div>
-
-    <div class="row mb-3">
-        <small class="text-muted">* Required field</small>
-    </div>
-    
-    @if (!string.IsNullOrEmpty(Model.successMessage))
-    {
-        <div class="alert alert-success alert-dismissible fade show" role="alert">
-            <strong>@Model.successMessage</strong>
+        @if (!string.IsNullOrEmpty(Model.errorMessage))
+        {
+            <div class="alert alert-warning alert-dismissible fade show" role="alert">
+            <strong>@Model.errorMessage</strong>
             <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
-        </div>
-    }
+            </div>
+        }
 
-    <div class="row mb-3">
-        <div class="offset-sm-3 col-sm-3 d-grid">
-            <button type="submit" class="btn btn-primary" id="submitBtn">Submit</button>
-        </div>
-        <div class="col-sm-3 d-grid">
-            <a class="btn btn-outline-primary" href="/UserManagement/CreateECStaff?userID=@Model.userID&action=cancel&userIDToDelete=@Model.userID" role="button">Cancel</a>
-        </div>
+        <form method="POST">
+            <div class="row mb-3 user-container">
+
+                <input type="hidden" name="userID" value="@Model.userID" />
+
+                <div class="row mb-3">
+                    <p class="text-danger text-end">* Required field</p>
+                </div>
+
+                <div class="row mb-3 pb-1">
+                    <label class="col-sm-2 col-form-label">User ID:</label>
+                    <div class="col-sm-10">
+                        <span class="form-control-plaintext form-readonly">@Model.userID</span>
+                    </div>
+                </div>
+
+                <div class="row mb-3">
+                    <label class="form-label" for="InputFirstName">First Name:<span class="text-danger" style="padding:5px">*</span></label>
+                    <input type="text" id="firstName" name="firstName" class="form-control" required maxlength="65" />
+                </div>
+
+                <div class="row mb-3">
+                    <label class="form-label" for="InputMiddleName">Middle Name:</label>
+                    <input type="text" id="middleName" name="middleName" class="form-control" required maxlength="65" />
+                </div>
+
+                <div class="row mb-3">
+                    <label class="form-label" for="InputLastName">Last Name:<span class="text-danger" style="padding: 5px">*</span></label>
+                    <input type="text" id="lastName" name="lastName" class="form-control" required maxlength="65" />
+                </div>
+
+                <div class="row mb-3">
+                    <label class="form-label" for="InputExtName">Extension Name:</label>
+                    <input type="text" id="extName" name="extName" class="form-control" required maxlength="65" />
+                </div>
+
+                <div class="row mb-3">
+                    <label class="col-sm-3 col-form-label">Sex<span class="text-danger" style="padding:5px">*</span></label>
+                    <div class="form-check">
+                        <input class="form-check-input" type="radio" name="sex" id="maleRadio" value="M" required>
+                        <label class="form-check-label" for="maleRadio">Male</label>
+                    </div>
+                    <div class="form-check">
+                        <input class="form-check-input" type="radio" name="sex" id="femaleRadio" value="F" required>
+                        <label class="form-check-label" for="femaleRadio">Female</label>
+                    </div>
+                </div>
+
+                <div class="row mb-3">
+                    <label class="col-sm-3 col-form-label">Birthdate *</label>
+                    <input type="date" id="birthdate" name="birthdate" class="form-control" required pattern="\d{4}-\d{2}-\d{2}" />
+                </div>
+
+                <div class="row mb-3">
+                    <label class="col-sm-3 col-form-label">Mobile Number *</label>
+                    <input type="tel" id="mobileNum" name="mobileNum" class="form-control" required maxlength="11" pattern="09\d{9}" />
+                </div>
+
+                <div class="row mb-3">
+                    <label class="col-sm-3 col-form-label">Email Address *</label>
+                    <input type="email" id="emailAddress" name="emailAddress" class="form-control" required maxlength="65" />
+                </div>
+
+                @if (!string.IsNullOrEmpty(Model.successMessage))
+                {
+                    <div class="alert alert-success alert-dismissible fade show" role="alert">
+                        <strong>@Model.successMessage</strong>
+                        <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+                    </div>
+                }
+
+                <!-- Cancel and Save Button -->
+                <div class="button-spacer">
+                    <button class="btn btn-outline-secondary mr-10" href="#" role="button">
+                        <i class="bi bi-arrow-left" style="padding:5px;"></i>
+                        Previous
+                    </button>
+                    <button class="btn btn-outline-secondary mr-10" href="/UserManagement/CreateECStaff?userID=@Model.userID&action=cancel&userIDToDelete=@Model.userID" role="button">
+                        Cancel
+                    </button>
+                    <button type="submit" class="btn btn-primary" id="submitBtn">Save</button>
+                </div>
+            </div>
+        </form>
+
     </div>
-</form>
+</div>
+
+
 
 <script>
     // Validate mobile number input
