--- a/Pages/EvacuationCenter/AddEvacuationCenter.cshtml
+++ b/Pages/EvacuationCenter/AddEvacuationCenter.cshtml
@@ -1,8 +1,7 @@
 ﻿@page
-@model AgapayAidSystem.Pages.EvacuationCenter._EditEvacuationCenterModel
+@model AgapayAidSystem.Pages.EvacuationCenter.AddEvacuationCenterModel
 @{
 }
-
 
 <style>
 
@@ -37,7 +36,7 @@
 
 		<div class="row pt-4">
 			<div class="col text-center">
-				<h1>Edit Evacuation Center</h1>
+				<h1>Add Evacuation Center</h1>
 			</div>
 		</div>
 
@@ -49,7 +48,7 @@
 				<div class="mb-3">
 					<label class="form-label" for="InputEvacuationCenterName">Evacuation Center Name:</label>
 					<input class="form-control" id="InputEvacuationCenterName" type="text">
-					</div>
+				</div>
 
 				<!-- Street Address -->
 				<div class="mb-3">
@@ -183,7 +182,7 @@
 		<!-- Cancel and Save Button -->
 		<div class="button-spacer">
 			<button class="btn btn-outline-secondary mr-10">Cancel</button>
-			<button type="submit" class="btn btn-primary">Submit</button>
+			<button type="submit" class="btn btn-primary">Save</button>
 		</div>
 	</div>
 </div>
