--- a/Pages/EvacuationCenter/Index.cshtml
+++ b/Pages/EvacuationCenter/Index.cshtml
@@ -27,7 +27,7 @@
 
 		<div class="col-auto">
 			<div class="d-flex justify-content-end align-items-center">
-				<a asp-page="/EvacuationCenter/_AddEvacuationCenter" class="btn btn-primary mb-2"><i class="bi bi-plus-circle pt" style="padding: 5px;"></i> Add Evacuation Center</a>
+				<a asp-page="/EvacuationCenter/AddEvacuationCenter" class="btn btn-primary mb-2"><i class="bi bi-plus-circle pt" style="padding: 5px;"></i> Add Evacuation Center</a>
 			</div>
 		</div>
 	</div>
@@ -60,8 +60,8 @@
 						<td width="15%">@item.status</td>
 						<td width=15%>
 							<button class="btn btn-dark"><i class="bi bi-card-list"></i></button>
-							<a asp-page="/EvacuationCenter/_EditEvacuationCenter" button class="btn btn-success"><i class="bi bi-pencil-fill"></i></a>
-							<a href="/EvacuationCenter/_DeleteEvacuationCenter?id=@item.centerID" button class="btn btn-danger"><i class="bi bi-trash-fill"></i></a>
+							<a button class="btn btn-success" href="/EvacuationCenter/EditEvacuationCenter?id=@item.centerID"><i class="bi bi-pencil-fill"></i></a>
+							<a button class="btn btn-danger" href="/EvacuationCenter/DeleteEvacuationCenter?id=@item.centerID"><i class="bi bi-trash-fill"></i></a>
 							<!--<a class="btn btn-danger btn-sm" href="/EvacuationCenter/_DeleteEvacuationCenter?id=@item.centerID"></a>-->
 							<!-- <button class="btn btn-danger"><i class="bi bi-trash-fill"></i></button> -->
 
